# hadrian

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  SUMMARY.md  THIRD_PARTY_NOTICES.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy-wasm.yml  docs.yml  helm.yml  release.yml
agent_instructions/: adding_provider.md  adding_runtime.md  architecture.md  configuration.md  containers.md  key_files.md  responses_pipeline.md
deploy/tests/: package.json  pnpm-workspace.yaml
docs/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/app/(home)/: page.tsx
docs/app/og/docs/[...slug]/: route.tsx
docs/components/: gateway-diagram.tsx  quick-start-selector.tsx  story-embed.tsx
docs/content/docs/: getting-started.mdx  index.mdx  troubleshooting.mdx
docs/content/docs/api/: index.mdx  responses-extensions.mdx
docs/content/docs/configuration/: auth.mdx  branding.mdx  meta.json  providers.mdx
docs/content/docs/configuration/features/: image-fetching.mdx  index.mdx
docs/content/docs/deployment/: index.mdx  kubernetes.mdx
docs/content/docs/features/: agents.mdx  frontend-tools.mdx  index.mdx  knowledge-bases.mdx  mcp-tool.mdx  meta.json  skills.mdx
docs/lib/: layout.shared.tsx
docs/public/: config-schema.json
helm/hadrian/: Chart.yaml  README.md  values.yaml
helm/hadrian/templates/: NOTES.txt
migrations_sqlx/postgres/: 20250101000000_initial.sql
migrations_sqlx/sqlite/: 20250101000000_initial.sql
openapi/: hadrian.openapi.json
scripts/: gen-third-party-notices.mjs  generate-openapi.sh  openapi-conformance.py  pyodide-314.sha256  test-knowledge-bases.py  vendor-wasm.mjs
src/: app.rs  init.rs  openapi.rs  wizard.rs
src/api_types/: chat_completion.rs  mod.rs  responses.rs  videos.rs
src/cache/: embedding_service.rs
src/catalog/: registry.rs
src/cli/: server.rs
src/config/: features.rs  limits.rs  providers.rs  runtimes.rs  server.rs  ui.rs
src/db/: mod.rs
src/db/postgres/: containers.rs  mcp_pending_approvals.rs  mod.rs  responses.rs  skills.rs  videos.rs
src/db/repos/: containers.rs  cursor.rs  mcp_pending_approvals.rs  mod.rs  responses.rs  skills.rs  videos.rs
src/db/sqlite/: containers.rs  mcp_pending_approvals.rs  mod.rs  responses.rs  skills.rs  videos.rs
src/db/tests/: mod.rs  responses.rs  videos.rs
src/guardrails/: evaluator.rs
src/jobs/: containers_reaper.rs  leader_lock.rs  mod.rs  responses_retention.rs
src/middleware/layers/: admin.rs  api.rs
src/middleware/util/: scope.rs
src/models/: api_key.rs  dynamic_provider.rs  prefixed_id.rs  skill.rs
src/pricing/: mod.rs
src/providers/: fallback.rs  mod.rs
src/providers/anthropic/: convert.rs  mod.rs  types.rs
src/providers/bedrock/: convert.rs
src/providers/open_ai/: mod.rs
src/providers/test/: mod.rs
src/providers/vertex/: convert.rs  mod.rs
src/routes/: execution.rs
src/routes/admin/: mod.rs  ui_config.rs
src/routes/api/: chat.rs  containers.rs  mod.rs  responses_lookup.rs  skills.rs  tools.rs  videos.rs
src/routing/: mod.rs  resolver.rs
src/runtimes/: microsandbox.rs  mod.rs  opensandbox.rs  passthrough.rs
src/services/: background_executor.rs  compactor.rs  container_session.rs  containers.rs  document_processor.rs  file_search_tool.rs  input_file_staging.rs  mcp_tool.rs  mod.rs  response_persister.rs  responses_chain.rs  responses_pipeline.rs  responses_webhook.rs  server_tool_history.rs  shell_tool.rs  skill_zip.rs  skills.rs  video_store.rs  web_search_tool.rs
src/services/mcp/: client.rs  executor.rs  mod.rs  preprocess.rs  resume.rs  service.rs
src/services/mcp/tool_search/: mod.rs  ranker.rs
src/services/server_tools/: mod.rs  runner.rs
src/streaming/: mod.rs
src/tests/: provider_e2e.rs
ui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/src/api/: openapi.json
ui/src/auth/: AuthProvider.tsx  index.ts  types.ts
ui/src/components/: chat-types.ts
ui/src/components/Admin/ApiKeyFormModal/: apiKeyOptionsFields.tsx
ui/src/components/Admin/ProviderFormModal/: ProviderFormModal.stories.tsx  ProviderFormModal.tsx
ui/src/components/Admin/SkillFormModal/: SkillFormModal.tsx
ui/src/components/Charts/: a11y.tsx
ui/src/components/ChatHeader/: ChatHeader.stories.tsx  ChatHeader.tsx
ui/src/components/ChatInput/: ChatInput.tsx  SlashCommandPopover.tsx
ui/src/components/Dropdown/: Dropdown.tsx
ui/src/components/Header/: Header.tsx
ui/src/components/MCPConfigModal/: MCPCatalog.stories.tsx
ui/src/components/ModelParametersPopover/: ModelParametersPopover.tsx
ui/src/components/MultiModelResponse/: MultiModelResponse.stories.tsx  MultiModelResponse.tsx
ui/src/components/PageGuard/: PageGuard.tsx
ui/src/components/ReasoningConfig/: ReasoningConfig.tsx
ui/src/components/SkillImportModal/: SkillImportModal.tsx  githubImport.ts
ui/src/components/SkillsButton/: SkillOwnerBadge.stories.tsx  SkillOwnerBadge.tsx  SkillsButton.tsx
ui/src/components/Studio/VideoGeneration/: VideoGenerationPanel.tsx  (+5 more)
ui/src/components/UsageDisplay/: UsageDisplay.stories.tsx  UsageDisplay.tsx
ui/src/config/: ConfigProvider.tsx  brandingCss.ts  defaults.ts  types.ts
ui/src/config/__tests__/: brandingCss.test.ts
ui/src/hooks/: useUserSkills.ts
ui/src/pages/: LoginPage.stories.tsx  LoginPage.tsx  MyProvidersPage.tsx  SkillsPage.tsx  TemplatesPage.tsx
ui/src/pages/admin/: VectorStoreDetailPage.tsx  skillColumns.tsx
ui/src/pages/chat/: ChatPage.tsx  useChat.ts  useMessageQueue.ts
ui/src/pages/project/: ProjectDetailPage.tsx  ProvidersTab.tsx  SkillsTab.tsx
ui/src/pages/providers/: shared.tsx
ui/src/pages/studio/: StudioPage.tsx  types.ts  useStudioHistory.ts
ui/src/preferences/: PreferencesProvider.tsx  types.ts
ui/src/routes/: AppRoutes.tsx
ui/src/services/duckdb/: duckdbWorker.ts
ui/src/services/mcpRegistry/: client.ts
ui/src/services/opfs/: opfsService.ts
ui/src/services/pyodide/: pyodideWorker.ts
ui/src/stores/: chatUIStore.ts  conversationStore.ts  streamingStore.ts
ui/src/stores/__tests__/: conversationStore.usage.test.ts
(+8 files in other folders)
