[package]
name = "hadrian"
version = "0.0.0-alpha.14"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "An open-source AI Gateway providing a unified OpenAI-compatible API for routing requests to multiple LLM providers"
repository = "https://github.com/hadriangateway/hadrian"
homepage = "https://hadriangateway.com"
keywords = ["ai", "llm", "gateway", "openai", "proxy"]
categories = ["web-programming::http-server", "api-bindings"]
default-run = "hadrian"
include = [
    "src/**/*",
    "migrations_sqlx/**/*",
    "data/models-dev-catalog.json",
    "ui/dist/**/*",
    "docs/out/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[lib]
name = "hadrian"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["full"]

# ─────────────────────────────────────────────────────────────────────────────
# Execution environment features
# ─────────────────────────────────────────────────────────────────────────────

# CLI argument parsing (clap)
cli = ["dep:clap"]

# Native server: socket binding, filesystem serving, config file loading
server = [
    "cli",
    "native-http",
    "native-async",
    "concurrency",
    "jwt",
    "dep:toml",
    "dep:tracing-subscriber",
    "axum/tokio",
    "axum/http1",
    "axum/http2",
    "axum/ws",
    "axum/multipart",
    "tower-http/fs",
    "tokio/full",
    "tokio-util/rt",
    "dep:zip",
]

# Native HTTP client features (TLS, HTTP/2)
native-http = [
    "reqwest/rustls-tls",
    "reqwest/http2",
    "reqwest/charset",
    "reqwest/macos-system-configuration",
]

# Native async runtime features (filesystem, networking, signals)
native-async = ["tokio/net", "tokio/fs", "tokio/signal", "tokio/process"]

# High-performance concurrent data structures (parking_lot, crossbeam)
concurrency = ["dep:parking_lot", "dep:crossbeam-channel"]

# JWT authentication (jsonwebtoken requires native crypto)
jwt = ["dep:jsonwebtoken"]

# ─────────────────────────────────────────────────────────────────────────────
# Meta profiles for different deployment scenarios
# ─────────────────────────────────────────────────────────────────────────────

tiny = ["server", "provider-openai", "provider-test"]
minimal = [
    "tiny",
    "database-sqlite",
    "embed-catalog",
    "embed-ui",
    "provider-anthropic",
    "provider-azure",
    "provider-bedrock",
    "provider-vertex",
    "wizard",
]
standard = [
    "minimal",
    "cel",
    "csv-export",
    "database-postgres",
    "document-extraction-basic",
    "embed-docs",
    "forecasting",
    "json-schema",
    "mcp",
    "otlp",
    "prometheus",
    "redis",
    "response-validation",
    "s3-storage",
    "secrets-aws",
    "secrets-azure",
    "secrets-gcp",
    "sso",
    "utoipa",
    "vault",
]
# `full` pulls in microsandbox (a KVM-based VMM SDK) and opensandbox.
# Microsandbox is Linux-only, brings ~135 transitive crates (KVM,
# sea-orm, oci-client, smoltcp, rcgen), and contains substantial
# unsafe. Keep it out of `standard` so the typical deployment profile
# stays small and macOS/Windows-portable.
full = [
    "standard",
    "document-extraction-full",
    "runtime-microsandbox",
    "runtime-opensandbox",
    "saml",
    "virus-scan",
]

# All features except embedded assets (UI, docs, catalog).
# Suitable for `cargo install` users who don't have build artifacts,
# and for deployments that serve the frontend separately.
headless = [
    "server",
    "cel",
    "csv-export",
    "database-postgres",
    "database-sqlite",
    "document-extraction-basic",
    "document-extraction-full",
    "forecasting",
    "json-schema",
    "mcp",
    "otlp",
    "prometheus",
    "provider-anthropic",
    "provider-azure",
    "provider-bedrock",
    "provider-openai",
    "provider-test",
    "provider-vertex",
    "redis",
    "response-validation",
    "runtime-microsandbox",
    "runtime-opensandbox",
    "s3-storage",
    "saml",
    "secrets-aws",
    "secrets-azure",
    "secrets-gcp",
    "sso",
    "utoipa",
    "vault",
    "virus-scan",
    "wizard",
]

# ─────────────────────────────────────────────────────────────────────────────
# WASM browser build — runs entirely in the browser via service worker
# ─────────────────────────────────────────────────────────────────────────────

wasm = [
    "provider-openai",
    "provider-anthropic",
    "provider-test",
    "database-wasm-sqlite",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-streams",
    "dep:tracing-wasm",
]

# ─────────────────────────────────────────────────────────────────────────────
# Component features
# ─────────────────────────────────────────────────────────────────────────────

# Providers (always-available: openai, anthropic, test)
provider-openai = []
provider-anthropic = []
provider-test = []
provider-bedrock = ["aws-sdk"]
provider-vertex = ["gcp-sdk"]
provider-azure = ["azure-sdk"]

# Cloud SDKs (shared dependencies for providers and secrets)
aws-sdk = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-eventstream",
    "dep:aws-smithy-types",
]
azure-sdk = ["dep:azure_core", "dep:azure_identity", "dep:time"]
gcp-sdk = ["dep:google-cloud-auth", "dep:google-cloud-token"]

# Secrets managers
secrets-aws = ["aws-sdk", "dep:aws-sdk-secretsmanager"]
secrets-azure = ["azure-sdk", "dep:azure_security_keyvault_secrets"]
secrets-gcp = ["gcp-sdk", "dep:google-cloud-secretmanager-v1"]
vault = ["dep:vaultrs"]

# Shell-tool runtimes (server-executed `shell` tool backends)
# - microsandbox: local microVMs (github.com/superradcompany/microsandbox)
# - opensandbox: Alibaba's Sandbox Protocol over HTTP
runtime-microsandbox = ["dep:microsandbox"]
runtime-opensandbox = []

# MCP (Model Context Protocol) tool support — `{"type": "mcp", ...}`
# on `/v1/responses`. Pulls in the official `rmcp` crate for the
# client + Streamable HTTP transport when `hadrian_hosted` mode runs
# the loop. The `passthrough_openai` mode is pure forwarding and does
# not need this dep, so the feature gate keeps it out of `tiny` and
# `minimal` builds.
mcp = ["dep:rmcp", "dep:reqwest_mcp"]

# Auth
sso = ["dep:hickory-resolver"]
saml = ["sso", "dep:samael", "dep:openssl", "dep:flate2"]

# Cache/Storage
redis = ["dep:redis"]
s3-storage = ["aws-sdk", "dep:aws-sdk-s3"]

# Embedded assets
embed-ui = ["dep:rust-embed"]
embed-docs = ["dep:rust-embed"]
embed-catalog = ["dep:rust-embed"]

# Databases
database-sqlite = ["dep:sqlx", "sqlx/sqlite"]
database-postgres = ["dep:sqlx", "sqlx/postgres"]
database-wasm-sqlite = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
]

# Authorization
cel = ["dep:cel-interpreter"]

# Metrics
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

# OpenAPI documentation
utoipa = ["dep:utoipa", "dep:utoipa-scalar"]

# Document processing
document-extraction-basic = ["dep:tiktoken-rs"]
document-extraction-full = ["document-extraction-basic", "dep:xberg"]

# New feature flags
forecasting = ["dep:augurs"]
wizard = ["dep:dialoguer", "dep:open", "dep:dirs"]
json-schema = ["dep:schemars"]
response-validation = ["dep:jsonschema"]
csv-export = ["dep:csv"]

# Observability
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:tonic",
    "dep:hostname",
]

# Optional integrations
virus-scan = ["dep:clamav-client"]

[dependencies]
# ─────────────────────────────────────────────────────────────────────────────
# Always-required dependencies (work on both native and wasm32)
# ─────────────────────────────────────────────────────────────────────────────
async-trait = "0.1.89"
axum = { version = "0.8.7", default-features = false, features = [
    "json", "matched-path", "original-uri", "query", "form", "tracing",
] }
axum-valid = "0.24.0"
base64 = "0.22"
bytes = "1.11.0"
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
http = "1.3.1"
http-body-util = "0.1.3"
ipnet = "2"
once_cell = "1.21"
rand = "0.8"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json", "stream", "multipart",
] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "rt", "macros", "sync", "time", "io-util",
] }
tokio-util = { version = "0.7.17" }
tower = "0.5.2"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = [
    "cors", "trace", "request-id", "propagate-header", "set-header", "limit",
] }
tracing = "0.1.41"
unicode-normalization = "0.1"
url = "2"
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

# ─────────────────────────────────────────────────────────────────────────────
# Optional: native-only dependencies (made optional for WASM compatibility)
# ─────────────────────────────────────────────────────────────────────────────
clap = { version = "4.5.53", features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", features = ["use_pem"], optional = true }
parking_lot = { version = "0.12.5", optional = true }
toml = { version = "0.9.8", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"], optional = true }

# ─────────────────────────────────────────────────────────────────────────────
# Optional: WASM-specific dependencies
# ─────────────────────────────────────────────────────────────────────────────
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
tracing-wasm = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-streams = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Headers", "Request", "RequestInit", "Response", "ResponseInit",
    "ReadableStream", "ServiceWorkerGlobalScope", "FetchEvent",
    "ExtendableEvent", "Url",
], optional = true }

# ─────────────────────────────────────────────────────────────────────────────
# Optional: feature-gated dependencies
# ─────────────────────────────────────────────────────────────────────────────
augurs = { version = "0.10.1", features = ["ets", "mstl", "forecaster"], optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"], optional = true }
aws-sdk-s3 = { version = "1.120.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"], optional = true }
aws-sdk-secretsmanager = { version = "1.97", default-features = false, features = ["default-https-client", "rt-tokio"], optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-eventstream = { version = "0.60.13", optional = true }
aws-smithy-types = { version = "1.3.4", optional = true }
azure_core = { version = "0.30", default-features = false, features = ["reqwest", "reqwest_deflate", "reqwest_gzip", "hmac_rust", "tokio"], optional = true }
azure_identity = { version = "0.30", default-features = false, features = ["tokio"], optional = true }
azure_security_keyvault_secrets = { version = "0.9", default-features = false, optional = true }
cel-interpreter = { version = "0.10", optional = true }
clamav-client = { version = "2.1", features = ["tokio"], optional = true }
csv = { version = "1.3", optional = true }
dialoguer = { version = "0.12.0", features = ["fuzzy-select", "completion"], optional = true }
dirs = { version = "6.0.0", optional = true }
flate2 = { version = "1", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
google-cloud-auth = { version = "0.17", default-features = false, features = ["rustls-tls"], optional = true }
google-cloud-secretmanager-v1 = { version = "1.2", optional = true }
google-cloud-token = { version = "0.1", optional = true }
hickory-resolver = { version = "0.26.1", features = ["tokio", "system-config"], optional = true }
hostname = { version = "0.4.2", optional = true }
jsonschema = { version = "0.29", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }
open = { version = "5.3.3", optional = true }
openssl = { version = "0.10", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "grpc-tonic", "gzip-tonic", "http-proto"], optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"], optional = true }
redis = { version = "0.32.7", features = ["aio", "tokio-comp", "cluster-async"], optional = true }
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"], optional = true }
samael = { version = "0.0.21", optional = true }
schemars = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "uuid", "chrono", "rust_decimal", "migrate", "json"], optional = true }
tiktoken-rs = { version = "0.9.1", optional = true }
time = { version = "0.3.47", default-features = false, optional = true }
tonic = { version = "0.14", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras"], optional = true }
utoipa-scalar = { version = "0.3", features = ["axum"], optional = true }
vaultrs = { version = "0.7.4", features = ["rustls"], optional = true }
xberg = { version = "1.0.0-rc.1", default-features = false, features = ["tokio-runtime", "pdf", "office", "excel", "ocr"], optional = true }

# Shell-tool runtime: local microVM SDK.
#
# Pinned to 0.4.5: microsandbox 0.4.6 bumped `microsandbox-network` to
# `hickory-proto = 0.26.0-alpha.1` with the `tls-ring` feature, which
# was dropped in the 0.26 stable release — so 0.4.6 + Hadrian's
# `hickory-resolver = 0.26.1` won't resolve. 0.4.5 still depends on the
# 0.25.x line which carries `tls-ring`, letting Cargo pull two majors
# of hickory-proto side by side.
#
# We skip `keyring` (it pulls dbus) but keep `net` for container
# networking.
microsandbox = { version = "=0.4.5", default-features = false, features = ["net", "prebuilt"], optional = true }

# Official Rust MCP SDK — client + Streamable HTTP transport + OAuth
# challenge detection. Used only when the `mcp` feature is enabled.
# Server-side features (transport-streamable-http-server, schemars,
# macros) are excluded to keep the runtime build lean; tests enable
# them via dev-dependencies when an in-process MCP server stub is
# needed.
rmcp = { version = "1.7", default-features = false, features = [
    "client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "auth",
    "reqwest",
], optional = true }

# rmcp 1.7's `StreamableHttpClient` is implemented for reqwest 0.13's
# `Client`, while Hadrian's primary HTTP client is reqwest 0.12. To pin
# the MCP transport's DNS to validated IPs (SSRF / DNS-rebinding guard)
# we must hand rmcp a client of *its* reqwest version, so depend on 0.13
# under an alias. Cargo unifies this with rmcp's transitive 0.13.x, so
# it's the same crate instance (and inherits rmcp's TLS features) — no
# duplicate compile. `default-features = false`: we only build a client
# with custom DNS resolution; TLS comes from rmcp's enabled features.
reqwest_mcp = { package = "reqwest", version = "0.13", default-features = false, optional = true }

# ─────────────────────────────────────────────────────────────────────────────
# Target-specific: WASM needs JS-backed getrandom for uuid/rand
# ─────────────────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.18.1", features = ["v4", "v5", "serde", "js"] }

[dev-dependencies]
rstest = "0.24"
serial_test = "3.2"
temp-env = "0.3"
tempfile = "3.23.0"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
tokio-stream = "0.1.17"
wiremock = "0.6"

[[bin]]
name = "hadrian"
path = "src/main.rs"

[[bin]]
name = "record_fixtures"
path = "src/bin/record_fixtures.rs"
required-features = ["provider-bedrock"]
